@@ -1,5 +1,10 @@
 2007-05-19  Wakaba  <wakaba@suika.fam.cx>
 
+	* tree-test-1.dat: Tests for |<iframe>|, |<noframes>|,
+	and |<xmp>| are added.
+
+2007-05-19  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-1.dat: A content model conformance
 	error was missing.
 
