@@ -1,5 +1,10 @@
 2007-05-19  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: In |main| phase, |in body| insertion
+	mode, action for |<iframe>| was missing.
+
+2007-05-19  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentChecker.pm: Support for many of HTML5 elements.
 	($GetHTMLNonNegativeIntegerAttrChecker): New.
 
